--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,127 @@
+0
+zipp==3.19.2
+absl-py==2.1.0
+altair==5.5.0
+astunparse==1.6.3
+attrs==24.2.0
+bidict==0.23.1
+bitarray==2.9.2
+bitstring==4.2.3
+blinker==1.8.2
+CacheControl==0.14.0
+cachetools==4.2.4
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+colorama==0.4.6
+contourpy==1.3.0
+cryptography==42.0.8
+cycler==0.12.1
+dnspython==2.6.1
+ecdsa==0.19.0
+esptool==4.7.0
+eventlet==0.36.1
+firebase-admin==6.5.0
+Flask==3.0.3
+Flask-SocketIO==5.3.6
+flatbuffers==24.3.25
+fonttools==4.55.0
+future==1.0.0
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==1.34.1
+google-api-python-client==2.136.0
+google-auth==1.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==0.4.6
+google-cloud-core==1.7.3
+google-cloud-firestore==1.7.0
+google-cloud-storage==2.17.0
+google-crc32c==1.5.0
+google-pasta==0.2.0
+google-resumable-media==2.7.1
+googleapis-common-protos==1.63.2
+greenlet==3.0.3
+grpcio==1.64.1
+grpcio-status==1.48.2
+gym==0.26.2
+gym-notices==0.0.8
+h11==0.14.0
+h5py==3.11.0
+httplib2==0.22.0
+idna==3.7
+importlib_metadata==8.0.0
+importlib_resources==6.4.5
+intelhex==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.7
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mdurl==0.1.2
+msgpack==1.0.8
+narwhals==1.14.2
+numpy==1.26.4
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==24.1
 pandas==2.2.3
-streamlit==1.40.0
-seaborn==0.9.0 
-matplotlib==3.9.2 
+pillow==11.0.0
+proto-plus==1.24.0
+protobuf==3.20.3
+pyarrow==18.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.8.0
+pyparsing==3.1.2
+pyserial==3.5
+python-dateutil==2.9.0.post0
+python-engineio==4.9.1
+python-socketio==5.11.3
+pytz==2024.1
+PyYAML==6.0.1
+reedsolo==1.7.0
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.21.0
+rsa==4.9
+seaborn==0.13.2
+simple-websocket==1.0.0
+six==1.16.0
+smmap==5.0.1
+streamlit==1.40.2
+tenacity==9.0.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.1
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+toml==0.10.2
+tornado==6.4.2
+typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.2
+watchdog==6.0.0
+websockets==12.0
+Werkzeug==3.0.3
+wrapt==1.16.0
+wsproto==1.2.0
+zipp==3.19.2
